<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textDisplayMessageContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_message_display"
            android:paddingLeft="5dp"
            android:paddingTop="25dp"
            android:paddingRight="5dp"
            android:textSize="16sp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReceive"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green_700"
            android:text="@string/text_receive_message"
            android:textColor="@color/white">

        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewChatWith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:textSize="18dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textOutputMessageContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_message_body"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:paddingRight="5dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:baselineAligned="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/textInputMessageContent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/message_content"/>

        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOpenChat"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/green_700"
            android:textColor="@color/white"
            android:text="@string/text_send_message">

        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

</LinearLayout>