<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            card_view:srcCompat="@drawable/no_profile_pic" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:text="@string/hint_name"
                android:textColor="@android:color/darker_gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewSex"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_sex"
                android:textColor="@android:color/darker_gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewCity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_city"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonChat"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="19dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/roundbtn"
            android:backgroundTint="@color/green_700"
            android:text="@string/text_chat"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>